@@ -1,3 +1,8 @@
+2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* JavaBinding.addin.xml: Added an Other section in the MD property dialog
+	  and moved some options there to avoid too many branches.
+
 2007-09-04  Michael Hutchinson <MHutchinson@novell.com> 
 
 	* JavaLanguageBinding.cs, Gui/GlobalOptionsPanel.cs,
